--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     </head>
     <body>
         <header class="flex">
-            <div class="col-33">
+            <div class="col-33 col-m-100">
                 <img src="img/logo.png" alt="logo">
             </div>
-            <div class="col-33">
+            <div class="col-33 col-m-100 m-mt">
                 <form name="search" class="form-search">
                     <input class="form-search-text" type="text" name="searchQuery" placeholder="Szukaj...">
                     <button class="form-search-submit uppercase" type="submit" class="uppercase">szukaj</button>
@@ -33,7 +33,7 @@
                 </div>
             </div>
         </header>
-        <nav class="align-center">
+        <nav class="navbar align-center">
             <p>--- miejsce na menu ---</p>
         </nav>
         <footer class="flex footer">
