Still working on RWD.

--- a/index.html
+++ b/index.html
@@ -3,49 +3,65 @@
     <head>
         <title>Webcamp</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="css/grid.css">
         <link rel="stylesheet" href="css/index.css">
         <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
         <script src="https://use.fontawesome.com/fd43abc220.js"></script>
     </head>
     <body>
-        <header class="flex">
+        <header class="flex header">
             <div class="col-33 col-m-100">
-                <img src="img/logo.png" alt="logo">
+                <img src="img/logo.png" alt="logo" class="header-logo">
             </div>
-            <div class="col-33 col-m-100 m-mt">
+            <div class="col-33 col-m-100 m-mt mobile-hide">
                 <form name="search" class="form-search">
                     <input class="form-search-text" type="text" name="searchQuery" placeholder="Szukaj...">
                     <button class="form-search-submit uppercase" type="submit" class="uppercase">szukaj</button>
                 </form>
             </div>
-            <div class="col-33 align-right icons">
-                <div class="icons-set">
+            <div class="col-33 align-right icons mobile-hide">
+                <div class="icons-set mobile-hide">
                     <i class="fa fa-envelope-open-o" aria-hidden="true"></i>
                     <span class="uppercase">kontakt</span>
                 </div>
-                <div class="icons-set">
+                <div class="icons-set mobile-hide">
                     <i class="fa fa-user" aria-hidden="true"></i>
                     <span class="uppercase">logowanie</span>
                 </div>
-                <div class="icons-set">
+                <div class="icons-set mobile-hide">
                     <i class="fa fa-shopping-cart" aria-hidden="true"></i>
-                    <span class="uppercase">kontakt</span>
+                    <span class="uppercase">koszyk</span>
                 </div>
             </div>
+
+            <div class="col-33 large-hide">
+                <i class="fa fa-search" aria-hidden="true"></i>
+            </div>
+            <div class="col-33 large-hide">
+                <i class="fa fa-bars" aria-hidden="true"></i>
+            </div>
+            <div class="col-33 large-hide">
+                <i class="fa fa-list" aria-hidden="true"></i>
+            </div>
         </header>
-        <nav class="navbar align-center">
+        <nav class="navbar align-center mobile-hide">
             <p>--- miejsce na menu ---</p>
         </nav>
         <footer class="flex footer">
-            <div class="col-33 footer-links">
-                <a href="mailto:" class="footer-link uppercase">kontakt</a>
-                <a href="#" class="footer-link uppercase">zamówienia</a>
-                <a href="#" class="footer-link uppercase">koszyk</a>
+            <div class="col-2">
+                <ul class="footer-links">
+                    <li>
+                        <a href="mailto:" class="footer-link uppercase">kontakt</a>
+                    </li>
+                    <li>
+                        <a href="#" class="footer-link uppercase">zamówienia</a>
+                    </li>
+                    <li>
+                        <a href="#" class="footer-link uppercase">koszyk</a>
+                    </li>
+                </ul>
             </div>
-            <div class="col-33">
-
-            </div>
-            <div class="col-33 align-right">
+            <div class="col-2 align-right">
                 <img src="img/poweredby_IAI-Shop_black.png" alt="iai-shop.com">
             </div>
         </footer>
