--- a/index.html
+++ b/index.html
@@ -45,7 +45,254 @@
             </div>
         </header>
         <nav class="navbar align-center mobile-hide">
-            <p>--- miejsce na menu ---</p>
+            <ul>
+                <li>
+                    <a href="/" title="Nowości">Nowości</a>
+                    <ul>
+                        <li><!--
+		        --><a href="/" target="_self" title="Kolekcja Summer">Kolekcja Summer</a>
+                            <ul>
+                                <li><a href="/" target="_self">Limited Edition</a></li><!--
+		                --><li><a href="/" target="_self">Business</a></li><!--
+		                --><li><a href="/" target="_self">Signature</a></li><!--
+		                --><li><a href="/" target="_self">Spodnie</a></li><!--
+		                --><li><a href="/" target="_self">Spudnice</a></li><!--
+		                --><li><a href="/" target="_self">Sukienki</a></li><!--
+		                --><li><a href="/" target="_self">Bluzki</a></li><!--
+		                --><li><a href="/" target="_self">Koszule</a></li><!--
+		                --><li><a href="/" target="_self">Swetry</a></li><!--
+		                --><li><a href="/" target="_self">Żakiety</a></li><!--
+		                --><li><a href="/" target="_self">Kurtki</a></li><!--
+		                --><li><a href="/" target="_self">Płaszcze</a></li><!--
+		             --></ul>
+                        </li><!--
+		     --><li>
+                        <a href="/" target="_self" title="Kolekcja Rouge">Kolekcja Rouge</a>
+                        <ul>
+                            <li><a href="/" target="_self">Business</a></li><!--
+		                --><li><a href="/" target="_self">Spodnie</a></li><!--
+		                --><li><a href="/" target="_self">Bluzki</a></li><!--
+		                --><li><a href="/" target="_self">Koszule</a></li><!--
+		                --><li><a href="/" target="_self">Swetry</a></li><!--
+		                --><li><a href="/" target="_self">Żakiety</a></li><!--
+		                --><li><a href="/" target="_self">Kurtki</a></li><!--
+		                --><li><a href="/" target="_self">Płaszcze</a></li><!--
+		             --></ul>
+                    </li><!--
+		     --><li>
+                        <a href="/" target="_self" title="Kolekcja Marina">Kolekcja Marina</a>
+                        <ul>
+                            <li><a href="/" target="_self">Signature</a></li><!--
+		                --><li><a href="/" target="_self">Spodnie</a></li><!--
+		                --><li><a href="/" target="_self">Spudnice</a></li><!--
+		                --><li><a href="/" target="_self">Sukienki</a></li><!--
+		                --><li><a href="/" target="_self">Bluzki</a></li><!--
+		                --><li><a href="/" target="_self">Koszule</a></li><!--
+		                --><li><a href="/" target="_self">Swetry</a></li><!--
+		                --><li><a href="/" target="_self">Żakiety</a></li><!--
+		                --><li><a href="/" target="_self">Kurtki</a></li><!--
+		                --><li><a href="/" target="_self">Płaszcze</a></li><!--
+		             --></ul>
+                    </li><!--
+		     --><li>
+                        <a href="/" target="_self" title="Vintage design">Vintage design</a>
+                        <ul>
+                            <li><a href="/" target="_self">Sukienki</a></li><!--
+		                --><li><a href="/" target="_self">Koszule</a></li><!--
+		                --><li><a href="/" target="_self">Płaszcze</a></li><!--
+		                --><li><a href="/" target="_self">Zobacz wszystkie</a></li><!--
+		             --></ul>
+                    </li>
+                    </ul>
+                </li><!--
+
+	 --><li>
+                <a href="/" title="Dla niej">Dla niej</a>
+                <ul>
+                    <li>
+                        <a href="/" target="_self" title="Kolekcja Rouge">Kolekcja Rouge</a>
+                        <ul>
+                            <li><a href="/" target="_self">Business</a></li><!--
+		                --><li><a href="/" target="_self">Spodnie</a></li><!--
+		                --><li><a href="/" target="_self">Bluzki</a></li><!--
+		                --><li><a href="/" target="_self">Koszule</a></li><!--
+		                --><li><a href="/" target="_self">Swetry</a></li><!--
+		                --><li><a href="/" target="_self">Żakiety</a></li><!--
+		                --><li><a href="/" target="_self">Kurtki</a></li><!--
+		                --><li><a href="/" target="_self">Płaszcze</a></li><!--
+		             --></ul>
+                    </li><!--
+		     --><li>
+                    <a href="/" target="_self" title="Kolekcja Marina">Kolekcja Marina</a>
+                    <ul>
+                        <li><a href="/" target="_self">Signature</a></li><!--
+		                --><li><a href="/" target="_self">Spodnie</a></li><!--
+		                --><li><a href="/" target="_self">Spudnice</a></li><!--
+		                --><li><a href="/" target="_self">Sukienki</a></li><!--
+		                --><li><a href="/" target="_self">Bluzki</a></li><!--
+		                --><li><a href="/" target="_self">Koszule</a></li><!--
+		                --><li><a href="/" target="_self">Swetry</a></li><!--
+		                --><li><a href="/" target="_self">Żakiety</a></li><!--
+		                --><li><a href="/" target="_self">Kurtki</a></li><!--
+		                --><li><a href="/" target="_self">Płaszcze</a></li><!--
+		             --></ul>
+                </li><!--
+		     --><li>
+                    <a href="/" target="_self" title="Vintage design">Vintage design</a>
+                    <ul>
+                        <li><a href="/" target="_self">Sukienki</a></li><!--
+		                --><li><a href="/" target="_self">Koszule</a></li><!--
+		                --><li><a href="/" target="_self">Płaszcze</a></li><!--
+		                --><li><a href="/" target="_self">Zobacz wszystkie</a></li><!--
+		             --></ul>
+                </li><!--
+		     --><li>
+                    <a href="/" target="_self" title="Kolekcja Summer">Kolekcja Summer</a>
+                    <ul>
+                        <li><a href="/" target="_self">Limited Edition</a></li><!--
+		                --><li><a href="/" target="_self">Business</a></li><!--
+		                --><li><a href="/" target="_self">Signature</a></li><!--
+		                --><li><a href="/" target="_self">Spodnie</a></li><!--
+		                --><li><a href="/" target="_self">Spudnice</a></li><!--
+		                --><li><a href="/" target="_self">Sukienki</a></li><!--
+		                --><li><a href="/" target="_self">Bluzki</a></li><!--
+		                --><li><a href="/" target="_self">Koszule</a></li><!--
+		                --><li><a href="/" target="_self">Swetry</a></li><!--
+		                --><li><a href="/" target="_self">Żakiety</a></li><!--
+		                --><li><a href="/" target="_self">Kurtki</a></li><!--
+		                --><li><a href="/" target="_self">Płaszcze</a></li><!--
+		             --></ul>
+                </li>
+                </ul>
+            </li><!--
+
+
+	--><li>
+                <a href="/" title="Dla niego">Dla niego</a>
+                <ul>
+                    <li><!--
+		        --><a href="/" target="_self" title="Kolekcja Summer">Kolekcja Summer</a>
+                        <ul>
+                            <li><a href="/" target="_self">Limited Edition</a></li><!--
+		                --><li><a href="/" target="_self">Business</a></li><!--
+		                --><li><a href="/" target="_self">Signature</a></li><!--
+		                --><li><a href="/" target="_self">Spodnie</a></li><!--
+		                --><li><a href="/" target="_self">Spudnice</a></li><!--
+		                --><li><a href="/" target="_self">Sukienki</a></li><!--
+		                --><li><a href="/" target="_self">Bluzki</a></li><!--
+		                --><li><a href="/" target="_self">Koszule</a></li><!--
+		                --><li><a href="/" target="_self">Swetry</a></li><!--
+		                --><li><a href="/" target="_self">Żakiety</a></li><!--
+		                --><li><a href="/" target="_self">Kurtki</a></li><!--
+		                --><li><a href="/" target="_self">Płaszcze</a></li><!--
+		             --></ul>
+                    </li><!--
+		     --><li>
+                    <a href="/" target="_self" title="Kolekcja Rouge">Kolekcja Rouge</a>
+                    <ul>
+                        <li><a href="/" target="_self">Business</a></li><!--
+		                --><li><a href="/" target="_self">Spodnie</a></li><!--
+		                --><li><a href="/" target="_self">Bluzki</a></li><!--
+		                --><li><a href="/" target="_self">Koszule</a></li><!--
+		                --><li><a href="/" target="_self">Swetry</a></li><!--
+		                --><li><a href="/" target="_self">Żakiety</a></li><!--
+		                --><li><a href="/" target="_self">Kurtki</a></li><!--
+		                --><li><a href="/" target="_self">Płaszcze</a></li><!--
+		             --></ul>
+                </li><!--
+		     --><li>
+                    <a href="/" target="_self" title="Kolekcja Marina">Kolekcja Marina</a>
+                    <ul>
+                        <li><a href="/" target="_self">Signature</a></li><!--
+		                --><li><a href="/" target="_self">Spodnie</a></li><!--
+		                --><li><a href="/" target="_self">Spudnice</a></li><!--
+		                --><li><a href="/" target="_self">Sukienki</a></li><!--
+		                --><li><a href="/" target="_self">Bluzki</a></li><!--
+		                --><li><a href="/" target="_self">Koszule</a></li><!--
+		                --><li><a href="/" target="_self">Swetry</a></li><!--
+		                --><li><a href="/" target="_self">Żakiety</a></li><!--
+		                --><li><a href="/" target="_self">Kurtki</a></li><!--
+		                --><li><a href="/" target="_self">Płaszcze</a></li><!--
+		             --></ul>
+                </li><!--
+		     --><li>
+                    <a href="/" target="_self" title="Vintage design">Vintage design</a>
+                    <ul>
+                        <li><a href="/" target="_self">Sukienki</a></li><!--
+		                --><li><a href="/" target="_self">Koszule</a></li><!--
+		                --><li><a href="/" target="_self">Płaszcze</a></li><!--
+		                --><li><a href="/" target="_self">Zobacz wszystkie</a></li><!--
+		             --></ul>
+                </li>
+                </ul>
+            </li><!--
+
+	 --><li>
+                <a href="/" title="Moda dziecięca">Moda dziecięca</a>
+                <ul>
+                    <li>
+                        <a href="/" target="_self" title="Kolekcja Rouge">Kolekcja Rouge</a>
+                        <ul>
+                            <li><a href="/" target="_self">Business</a></li><!--
+		                --><li><a href="/" target="_self">Spodnie</a></li><!--
+		                --><li><a href="/" target="_self">Bluzki</a></li><!--
+		                --><li><a href="/" target="_self">Koszule</a></li><!--
+		                --><li><a href="/" target="_self">Swetry</a></li><!--
+		                --><li><a href="/" target="_self">Żakiety</a></li><!--
+		                --><li><a href="/" target="_self">Kurtki</a></li><!--
+		                --><li><a href="/" target="_self">Płaszcze</a></li><!--
+		             --></ul>
+                    </li><!--
+		        --><li>
+                    <a href="/" target="_self" title="Vintage design">Vintage design</a>
+                    <ul>
+                        <li><a href="/" target="_self">Sukienki</a></li><!--
+		                --><li><a href="/" target="_self">Koszule</a></li><!--
+		                --><li><a href="/" target="_self">Płaszcze</a></li><!--
+		                --><li><a href="/" target="_self">Zobacz wszystkie</a></li><!--
+		             --></ul>
+                </li><!--
+
+		     --><li>
+                    <a href="/" target="_self" title="Kolekcja Marina">Kolekcja Marina</a>
+                    <ul>
+                        <li><a href="/" target="_self">Signature</a></li><!--
+		                --><li><a href="/" target="_self">Spodnie</a></li><!--
+		                --><li><a href="/" target="_self">Spudnice</a></li><!--
+		                --><li><a href="/" target="_self">Sukienki</a></li><!--
+		                --><li><a href="/" target="_self">Bluzki</a></li><!--
+		                --><li><a href="/" target="_self">Koszule</a></li><!--
+		                --><li><a href="/" target="_self">Swetry</a></li><!--
+		                --><li><a href="/" target="_self">Żakiety</a></li><!--
+		                --><li><a href="/" target="_self">Kurtki</a></li><!--
+		                --><li><a href="/" target="_self">Płaszcze</a></li><!--
+		             --></ul>
+                </li><!--
+
+		     --><li>
+                    <a href="/" target="_self" title="Kolekcja Summer">Kolekcja Summer</a>
+                    <ul>
+                        <li><a href="/" target="_self">Limited Edition</a></li><!--
+		                --><li><a href="/" target="_self">Business</a></li><!--
+		                --><li><a href="/" target="_self">Signature</a></li><!--
+		                --><li><a href="/" target="_self">Spodnie</a></li><!--
+		                --><li><a href="/" target="_self">Spudnice</a></li><!--
+		                --><li><a href="/" target="_self">Sukienki</a></li><!--
+		                --><li><a href="/" target="_self">Bluzki</a></li><!--
+		                --><li><a href="/" target="_self">Koszule</a></li><!--
+		                --><li><a href="/" target="_self">Swetry</a></li><!--
+		                --><li><a href="/" target="_self">Żakiety</a></li><!--
+		                --><li><a href="/" target="_self">Kurtki</a></li><!--
+		                --><li><a href="/" target="_self">Płaszcze</a></li><!--
+		             --></ul>
+                </li>
+                </ul>
+            </li><!--
+
+	--><li>
+                <a href="/" title="Outlet -60%"><i class="fa fa-tags"></i>Outlet -60%</a>
+            </li>
+            </ul>
         </nav>
         <footer class="flex footer">
             <div class="col-2">
