Added menu for tablets.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <header class="flex header">
-            <div class="col-3 col-m-100">
+            <div class="col-3 col-m-1 col-t-1">
                 <img src="img/logo.png" alt="logo" class="header-logo">
             </div>
             <div class="col-3 col-m-100 m-mt mobile-hide">
